# duckchain-mcp

./: README.md  pyproject.toml  smithery.yaml
src/duckchain/: __init__.py  server.py
